# togi

./: Cargo.toml  LICENSE
src/: agent.rs  app.rs  builtins.rs  command.rs  common.rs  config.rs  constants.rs  error.rs  inject.rs  lib.rs  main.rs  paginate.rs  tools.rs  ui.rs
src/tools/: modify.rs  read.rs  shell.rs
src/tools/modify/: atomic.rs  edit.rs  write.rs
src/tools/read/: binary.rs  io.rs  text.rs
src/tools/shell/: capture.rs  process.rs  render.rs  runner.rs
src/ui/: conversation.rs  editor.rs  history.rs  interaction.rs  markdown.rs  output.rs  render.rs  style.rs  summarize.rs  theme.rs
tests/: e2e.rs  integration.rs  support.rs
tests/e2e/: shell_tool.rs
tests/integration/: modify_tool.rs  read_tool.rs
