[package]
name = "togi"
version = "0.1.0"
edition = "2024"
autotests = false

[[test]]
name = "e2e"
path = "tests/e2e.rs"

[[test]]
name = "integration"
path = "tests/integration.rs"

[dependencies]
arboard = "3.6.1"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6"
futures = "0.3"
libc = "0.2"
pulldown-cmark = "0.13.4"
ratatui = "0.30.1"
rig = "0.38.1"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
similar = "3.1.1"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "process", "time", "fs", "io-util", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "1.1.2"
